# SlicerFreeSurfer

./: CMakeLists.txt  LICENSE  README.md  SlicerFreeSurfer.xcf  SlicerFreeSurferImporter.xcf
FSImporter/: CMakeLists.txt  qSlicerFSImporterModule.cxx  qSlicerFSImporterModule.h  qSlicerFSImporterModuleWidget.cxx  qSlicerFSImporterModuleWidget.h
FSImporter/Logic/: vtkSlicerFSImporterLogic.cxx  vtkSlicerFSImporterLogic.h
FSImporter/Resources/: qSlicerFSImporterModule.qrc
FSImporter/Resources/UI/: qSlicerFSImporterFooBarWidget.ui  qSlicerFSImporterModuleWidget.ui
FSImporter/Widgets/: qSlicerFSImporterFooBarWidget.cxx  qSlicerFSImporterFooBarWidget.h
FreeSurfer/: CMakeLists.txt  vtkFSSurfaceAnnotationReader.cxx  vtkFSSurfaceAnnotationReader.h  vtkFSSurfaceLabelReader.cxx  vtkFSSurfaceLabelReader.h
FreeSurferImporter/: CMakeLists.txt  qSlicerFreeSurferImporterCurveReader.cxx  qSlicerFreeSurferImporterCurveReader.h  qSlicerFreeSurferImporterLabelReader.cxx  qSlicerFreeSurferImporterLabelReader.h  qSlicerFreeSurferImporterModelOptionsWidget.cxx  qSlicerFreeSurferImporterModelOptionsWidget.h  qSlicerFreeSurferImporterModelReader.cxx  qSlicerFreeSurferImporterModelReader.h  qSlicerFreeSurferImporterModule.cxx  qSlicerFreeSurferImporterModule.h  qSlicerFreeSurferImporterModuleWidget.cxx  qSlicerFreeSurferImporterModuleWidget.h  qSlicerFreeSurferImporterPlaneReader.cxx  qSlicerFreeSurferImporterPlaneReader.h  qSlicerFreeSurferImporterScalarOverlayOptionsWidget.cxx  qSlicerFreeSurferImporterScalarOverlayOptionsWidget.h  qSlicerFreeSurferImporterScalarOverlayReader.cxx  qSlicerFreeSurferImporterScalarOverlayReader.h  qSlicerFreeSurferImporterSegmentationReader.cxx  qSlicerFreeSurferImporterSegmentationReader.h  qSlicerXcedeCatalogReader.cxx  qSlicerXcedeCatalogReader.h
FreeSurferImporter/Logic/: CMakeLists.txt  vtkSlicerFreeSurferExtrudeRule.cxx  vtkSlicerFreeSurferExtrudeRule.h  vtkSlicerFreeSurferExtrudeTool.cxx  vtkSlicerFreeSurferExtrudeTool.h  vtkSlicerFreeSurferImporterLogic.cxx  vtkSlicerFreeSurferImporterLogic.h
FreeSurferImporter/MRML/: CMakeLists.txt  vtkFreeSurferCurveGenerator.cxx  vtkFreeSurferCurveGenerator.h  vtkMRMLFreeSurferModelOverlayStorageNode.cxx  vtkMRMLFreeSurferModelOverlayStorageNode.h  vtkMRMLFreeSurferModelStorageNode.cxx  vtkMRMLFreeSurferModelStorageNode.h  vtkMRMLFreeSurferProceduralColorNode.cxx  vtkMRMLFreeSurferProceduralColorNode.h
FreeSurferImporter/Resources/: qSlicerFreeSurferImporterModule.qrc
FreeSurferImporter/Resources/Icons/: FreeSurferImporter.xcf
FreeSurferImporter/Resources/UI/: qSlicerFreeSurferImporterModelOptionsWidget.ui  qSlicerFreeSurferImporterModuleWidget.ui  qSlicerFreeSurferImporterScalarOverlayOptionsWidget.ui
FreeSurferMarkups/: CMakeLists.txt  qSlicerFreeSurferMarkupsModule.cxx  qSlicerFreeSurferMarkupsModule.h
FreeSurferMarkups/Logic/: CMakeLists.txt  vtkSlicerFreeSurferMarkupsLogic.cxx  vtkSlicerFreeSurferMarkupsLogic.h
FreeSurferMarkups/MRML/: CMakeLists.txt  vtkFreeSurferCurveGenerator.cxx  vtkFreeSurferCurveGenerator.h  vtkMRMLFreeSurferMarkupsCurveNode.cxx  vtkMRMLFreeSurferMarkupsCurveNode.h  vtkMRMLMarkupsFreeSurferCurveNode.cxx  vtkMRMLMarkupsFreeSurferCurveNode.h  vtkSlicerFreeSurferDijkstraGraphGeodesicPath.cxx  vtkSlicerFreeSurferDijkstraGraphGeodesicPath.h
FreeSurferMarkups/MRMLDM/: CMakeLists.txt  vtkMRMLFreeSurferMarkupsDisplayableManager.cxx  vtkMRMLFreeSurferMarkupsDisplayableManager.h  vtkMRMLFreeSurferMarkupsDisplayableManagerHelper.cxx  vtkMRMLFreeSurferMarkupsDisplayableManagerHelper.h
FreeSurferMarkups/Resources/: qSlicerFreeSurferMarkupsModule.qrc
NiBabelModelIO/: CMakeLists.txt  NiBabelModelIO.py  NibabelModelIO.py
NiBabelModelIO/Resources/UI/: NibabelModelIO.ui
